Some changes
Now it is working to add my generated classes: "org.huawei.GeneratedLinkedList";
Before this time my utility couldn't find them;